assets/styles/block/_cards.scss
.card a {
    color: var(--black);
    display: block;
    text-decoration: none;
}

.card a:hover {
    color: var(--cinnabar);
}

.card-image {
    border: solid 1px var(--black);
    filter: grayscale(1);
    -webkit-filter: grayscale(1);
    margin-bottom: -1px;
}

.card-image:hover {
    filter: grayscale(0);
    -webkit-filter: grayscale(0);
}

.card-image img {
    min-height: 200px;
    object-fit: cover;
    object-position: center;
}

.card-sponsors .card-image img {
    max-width: 144px;
    max-height: 120px;
}

.card-image a {
    color: var(--celeste);
    text-align: center;
    text-decoration: underline;
}

.card-event .card-image {
    filter: unset;
}

.card-header h3 {
    font-weight: 700;
}

.card-header h3,
.card-header p {
    font-size: var(--font-size-16);
}

.card-details {
    align-content: center;
    display: grid;
    grid-gap: var(--space-32);
    grid-template-columns: 1fr 3fr;
}

.card-date {
    color: var(--black);
    font-size: var(--font-size-16);
    font-weight: 700;
    letter-spacing: -0.5px;
    position: relative;
    text-transform: uppercase;
}

.card-date::before {
    content: "";
    clip-path: polygon(7% 0, 93% 11%, 86% 31%, 100% 54%, 93% 89%, 25% 96%, 24% 100%, 0 79%);
    background-color: var(--beige);
    height: 80px;
    width: 80px;
    position: absolute;
    inset: 0;
    top: -16px;
    left: 0;
    z-index: -10;
}

.card-date figure {
    position: absolute;
    top: -16px;
    right: 0;
    bottom: 0;
    left: 0;
}

.card-date p {
    position: relative;
    left: 16px;
}

.card-date p,
.card-info p {
    line-height: 1.6;
}

